tests/resource/valid/collection/collection_type.mamba
def x: List[Int] := [0, 2, 51]

def y: Int := x[0]
