tests/resource/invalid/type/collection/conflicting_collection_types.mamba
def x := [0, "asdf", 51]

def y := x[0]

def f(x: Int) -> Int => x + 5

f(y)
